@@ -2,6 +2,7 @@ package com.xiaoleilu.hutool.demo;
 
 import java.util.List;
 
+import com.xiaoleilu.hutool.util.ObjectUtil;
 import com.xiaoleilu.hutool.util.StrUtil;
 
 public class StrUtilDemo {
@@ -16,5 +17,14 @@ public class StrUtilDemo {
 		for (String str : split) {
 			System.out.println(str);
 		}
+		
+		//
+		String param1 = "param1";
+		int[] param2 = {1,2,3,4,5};
+		String format = StrUtil.format("这是第一个参数值：{}， 第二个参数值：{}", param1, param2);
+		System.out.println(format);
+		
+		int b = 0;
+		System.out.println(ObjectUtil.isBasicType(b));
 	}
 }
